# resource-booking-django

./: .gitignore  README.md  pyproject.toml
resource_booking/: Makefile  manage.py
resource_booking/booking/: admin.py  booking_views.py  models.py  serializers.py  urls.py  views.py
resource_booking/booking/migrations/: 0001_initial.py  0002_alter_booking_user.py  0003_room_size.py
resource_booking/resource_booking/: asgi.py  settings.py  urls.py  wsgi.py
resource_booking/users/: urls.py  views.py
