[tool.poetry]
name = "resource-booking"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<4"
django = ">=5.0.3"
pytest = "8.1.1"
pytest-cov = "5.0.0"
uwsgi = "2.0.24"
werkzeug = "3.0.1"

[tool.poetry.dev-dependencies]
bpython = "0.24"
pudb = "2024.1"
django-stubs = "4.2.7"
ruff = "0.3.4"
mypy = "1.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]